After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796847 - gstreamer-1.14.2: 3 * redundant condition ?
gstreamer-1.14.2: 3 * redundant condition ?
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
1.14.x
Other Linux
: Normal minor
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-07-20 16:49 UTC by dcb
Modified: 2018-07-24 07:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description dcb 2018-07-20 16:49:07 UTC
[gstreamer-1.14.2/gst/gstpadtemplate.c:282]: (style) Redundant condition: underscore. '!underscore || (underscore && str<underscore)' is equivalent to '!underscore || str<underscore'
[gstreamer-1.14.2/gst/gstparse.c:196]: (style) Redundant condition: in_quotes. '!in_quotes || (in_quotes && *(str-1)!='\\')' is equivalent to '!in_quotes || *(str-1)!='\\''
[gstreamer-1.14.2/gst/parse/types.h:92]: (style) Redundant condition: in_quotes. '!in_quotes || (in_quotes && *(walk-1)!='\\')' is equivalent to '!in_quotes || *(walk-1)!='\\''
Comment 1 Sebastian Dröge (slomo) 2018-07-23 09:35:48 UTC
Do you want to provide a patch for this?
Comment 2 dcb 2018-07-23 17:49:04 UTC
(In reply to Sebastian Dröge (slomo) from comment #1)
> Do you want to provide a patch for this?

No thanks. I am happy for someone else to provide a patch.
Comment 3 Sebastian Dröge (slomo) 2018-07-24 07:03:02 UTC
commit b079334c1c8f250a6b15c5c6950d60d5eb849c2b (HEAD -> master, origin/master, origin/HEAD)
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Tue Jul 24 09:58:31 2018 +0300

    gst: Simplify some boolean expressions
    
    (!x || (x && y)) is the same as (!x || y)
    
    https://bugzilla.gnome.org/show_bug.cgi?id=796847